Added new Game Objects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 2.6)
 
 project(RSnake LANGUAGES CXX)
 
@@ -6,5 +6,13 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
-add_executable(RSnake main.cpp Snake.cpp Engine.cpp Board.cpp Fruits.cpp)
+#Bring the headers into the project
+#include_directories(include)
+
+set(SOURCES main.cpp Snake.cpp Engine.cpp Board.cpp Fruit.cpp DBoardWall.cpp DSnakeBody.cpp DFruit.cpp)
+
+#However, the file(GLOB...) allows for wildcard additions:
+#file(GLOB SOURCES "src/*.cpp")
+
+add_executable(RSnake ${SOURCES})
 
