Cmake reorganization structure cleanup #2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,35 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.13)
 
 project(RSnake LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-#Bring the headers into the project
-
-set(INCLUDE_DIRECTORIES
-    Control
-    DrawShapes
-    Engine
-    GameObjects)
-
-include_directories(${INCLUDE_DIRECTORIES})
-
-#include_directories(Control)
-#include_directories(DrawShapes)
-#include_directories(Engine)
-#include_directories(GameObjects)
-
-set(SOURCES
-    main.cpp
-    Control/InputControl.cpp
-    DrawShapes/DBoardWall.cpp
-    DrawShapes/DSnakeBody.cpp
-    DrawShapes/DFruit.cpp
-    DrawShapes/DBodyBuilder.cpp
-    Engine/Engine.cpp
-    GameObjects/Snake.cpp
-    GameObjects/Board.cpp
-    GameObjects/Fruit.cpp
-    GameObjects/ScoreBoard.cpp)
+add_subdirectory(Control)
+add_subdirectory(Shapes)
+add_subdirectory(Engine)
+add_subdirectory(GameObjects)
 
 #However, the file(GLOB...) allows for wildcard additions:
 #file(GLOB SOURCES "src/*.cpp")
 
-add_executable(RSnake ${SOURCES})
+add_executable(RSnake main.cpp)
+
+target_link_libraries(RSnake PUBLIC Control)
+target_link_libraries(RSnake PUBLIC Shapes)
+target_link_libraries(RSnake PUBLIC Engine)
+target_link_libraries(RSnake PUBLIC GameObjects)
+
+target_include_directories(Control PUBLIC
+                           "${PROJECT_BINARY_DIR}"
+                           "${PROJECT_SOURCE_DIR}/Control"
+                           )
+target_include_directories(Shapes PUBLIC
+                           "${PROJECT_SOURCE_DIR}/Shapes"
+                           )
+target_include_directories(Engine PUBLIC
+                           "${PROJECT_SOURCE_DIR}/Engine"
+                           )
+target_include_directories(GameObjects PUBLIC
+                           "${PROJECT_SOURCE_DIR}/GameObjects"
+                          )
