--- a/Shapes/CMakeLists.txt
+++ b/Shapes/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 3.13)
 
-add_library(Shapes
+set (INCLUDES_DIRS
+     Shapes
+    )
+
+add_library(Shapes STATIC
             DBoardWall.cpp
             DSnakeBody.cpp
             DFruit.cpp
             DBodyBuilder.cpp)
+
+target_include_directories(Shapes PUBLIC ${INCLUDE_DIRS})
