--- a/Control/CMakeLists.txt
+++ b/Control/CMakeLists.txt
@@ -1,3 +1,8 @@
 cmake_minimum_required(VERSION 3.13)
 
-add_library(Control InputControl.cpp)
+set (INCLUDES_DIRS
+     Control
+    )
+add_library(Control STATIC InputControl.cpp)
+
+target_include_directories(Control PUBLIC ${INCLUDE_DIRS})
