--- a/GameObjects/CMakeLists.txt
+++ b/GameObjects/CMakeLists.txt
@@ -1,12 +1,16 @@
 cmake_minimum_required(VERSION 3.13)
 
-add_library(GameObjects
+set (INCLUDES_DIRS
+     GameObjects
+     "${PROJECT_SOURCE_DIR}/Shapes"
+    )
+
+add_library(GameObjects STATIC
             Snake.cpp
             Board.cpp
             Fruit.cpp
             ScoreBoard.cpp)
 
-target_link_libraries(GameObjects PUBLIC Shapes)
+target_link_libraries(GameObjects PRIVATE Shapes)
 
-target_include_directories(GameObjects PUBLIC
-    "${PROJECT_SOURCE_DIR}/Shapes")
+target_include_directories(GameObjects PUBLIC ${INCLUDE_DIRS})
