--- a/Control/CMakeLists.txt
+++ b/Control/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.13)
 
-set (INCLUDES_DIRS
-     Control
-    )
 add_library(Control STATIC InputControl.cpp)
 
-target_include_directories(Control PUBLIC ${INCLUDE_DIRS})
+target_include_directories(Control PUBLIC
+#                           "${PROJECT_BINARY_DIR}"
+                           "${PROJECT_SOURCE_DIR}/Control"
+                           )
