--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -1,11 +1,10 @@
-cmake_minimum_required(VERSION 3.13)
-
 add_library(Engine STATIC Engine.cpp)
 
 target_link_libraries(Engine PRIVATE
-                      GameObjects
-                      Control)
+  GameObjects
+  Control
+)
 
 target_include_directories(Engine PUBLIC
-                         "${PROJECT_SOURCE_DIR}/Engine"
-                         )
+  "${PROJECT_SOURCE_DIR}/Engine"
+)
