--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,10 @@ project(RSnake LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+#Hack for VS for dynamic linking
 set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
+
+enable_testing()
 
 add_subdirectory(Control)
 add_subdirectory(Shapes)
