--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,18 @@ cmake_minimum_required(VERSION 3.13)
 
 project(RSnake LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-#Hack for VS for dynamic linking
-set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
 
-enable_testing()
+
+#find_package(GTest CONFIG REQUIRED)
+find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 
 add_subdirectory(Control)
 add_subdirectory(Shapes)
 add_subdirectory(Engine)
 add_subdirectory(GameObjects)
-add_subdirectory(Tests)
+#add_subdirectory(Tests)
 
 add_executable(RSnake main.cpp)
 
@@ -21,3 +21,4 @@ target_link_libraries(RSnake PRIVATE Control)
 target_link_libraries(RSnake PRIVATE Shapes)
 target_link_libraries(RSnake PRIVATE Engine)
 target_link_libraries(RSnake PRIVATE GameObjects)
+target_link_libraries(RSnake PRIVATE sfml-system sfml-graphics sfml-window)
