Refactoring still on going

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 
 add_subdirectory(Control)
-add_subdirectory(Shapes)
+add_subdirectory(Drawable)
 add_subdirectory(Engine)
 add_subdirectory(GameObjects)
 #add_subdirectory(Tests)
@@ -18,7 +18,7 @@ add_subdirectory(GameObjects)
 add_executable(RSnake main.cpp)
 
 target_link_libraries(RSnake PRIVATE Control)
-target_link_libraries(RSnake PRIVATE Shapes)
+target_link_libraries(RSnake PRIVATE Drawable)
 target_link_libraries(RSnake PRIVATE Engine)
 target_link_libraries(RSnake PRIVATE GameObjects)
 target_link_libraries(RSnake PRIVATE sfml-system sfml-graphics sfml-window)
