--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #find_package(GTest CONFIG REQUIRED)
 find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 
+
+file(COPY ${CMAKE_CURRENT_LIST_DIR}/Assets/Fonts/
+     DESTINATION ${CMAKE_BINARY_DIR}/Assets/Fonts/)
+
 add_subdirectory(Control)
 add_subdirectory(Drawable)
 add_subdirectory(Engine)
