Snake Fix and add UT for Snake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.24)
 
 project(RSnake LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include(GoogleTest)
+enable_testing()
 
-#find_package(GTest CONFIG REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 
 
@@ -17,7 +19,6 @@ add_subdirectory(Control)
 add_subdirectory(Drawable)
 add_subdirectory(Engine)
 add_subdirectory(GameObjects)
-#add_subdirectory(Tests)
 
 add_executable(RSnake main.cpp)
 
