--- a/GameObjects/CMakeLists.txt
+++ b/GameObjects/CMakeLists.txt
@@ -4,10 +4,11 @@ add_library(GameObjects STATIC
     Fruit.cpp
     ScoreBoard.cpp
 )
-
-target_link_libraries(GameObjects PRIVATE Drawable)
-
 target_include_directories(GameObjects PUBLIC
     "${PROJECT_SOURCE_DIR}/GameObjects"
     "${PROJECT_SOURCE_DIR}/Utilities"
 )
+
+target_link_libraries(GameObjects PUBLIC Drawable)
+
+add_subdirectory(Tests)
