--- a/.github/workflows/my_ci.yml
+++ b/.github/workflows/my_ci.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup Vcpkg
-    - uses: friendlyanon/setup-vcpkg@v1
+      uses: friendlyanon/setup-vcpkg@v1
       with: { committish: 63aa65e65b9d2c08772ea15d25fb8fdb0d32e557 }
   
     - name: CMake Configure
