--- a/.github/workflows/my_ci.yml
+++ b/.github/workflows/my_ci.yml
@@ -23,6 +23,9 @@ jobs:
       # Checkout the repository to the GitHub Actions runner
       uses: actions/checkout@v3
 
+    - name: Setup Ninja
+      uses: ashutoshvarma/setup-ninja@master
+
     - name: Setup Vcpkg
       uses: friendlyanon/setup-vcpkg@v1
       with: { committish: 63aa65e65b9d2c08772ea15d25fb8fdb0d32e557 }
