--- a/.github/workflows/my_ci.yml
+++ b/.github/workflows/my_ci.yml
@@ -23,9 +23,6 @@ jobs:
       # Checkout the repository to the GitHub Actions runner
       uses: actions/checkout@v3
 
-    - name: Setup Ninja
-      uses: ashutoshvarma/setup-ninja@master
-
     - name: Setup Vcpkg
       uses: friendlyanon/setup-vcpkg@v1
       with: { committish: 63aa65e65b9d2c08772ea15d25fb8fdb0d32e557 }
@@ -34,7 +31,7 @@ jobs:
       env:
           CC: ${{ steps.install_cc.outputs.cc }}
           CXX: ${{ steps.install_cc.outputs.cxx }}
-      run: cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -G Ninja -D "CMAKE_TOOLCHAIN_FILE=${{env.VCPKG_ROOT}}/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE:STRING=${{ matrix.configuration }} -DCMAKE_CXX_COMPILER=${{env.CXX}} -DCMAKE_C_COMPILER=${{env.CC}}
+      run: cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -G clang -D "CMAKE_TOOLCHAIN_FILE=${{env.VCPKG_ROOT}}/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE:STRING=${{ matrix.configuration }} -DCMAKE_CXX_COMPILER=${{env.CXX}} -DCMAKE_C_COMPILER=${{env.CC}}
     
     - name: CMake Build
       run: cmake --build ${{github.workspace}}/build
