--- a/Drawable/CMakeLists.txt
+++ b/Drawable/CMakeLists.txt
@@ -6,11 +6,13 @@ add_library(Drawable STATIC
     DFruit.cpp
 )
 
-target_link_libraries(Drawable PRIVATE 
-    sfml-graphics
+target_link_libraries(Drawable 
+    PRIVATE 
+        sfml-graphics
 )
 
-target_include_directories(Drawable PUBLIC
-    "${PROJECT_SOURCE_DIR}/Drawable"
-    "${PROJECT_SOURCE_DIR}/Utilities"
+target_include_directories(Drawable 
+    PUBLIC
+        "${PROJECT_SOURCE_DIR}/Drawable"
+        "${PROJECT_SOURCE_DIR}/Utilities"
 )
