--- a/GameObjects/CMakeLists.txt
+++ b/GameObjects/CMakeLists.txt
@@ -4,11 +4,14 @@ add_library(GameObjects STATIC
     Fruit.cpp
     ScoreBoard.cpp
 )
-target_include_directories(GameObjects PUBLIC
-    "${PROJECT_SOURCE_DIR}/GameObjects"
-    "${PROJECT_SOURCE_DIR}/Utilities"
+target_include_directories(GameObjects 
+    PUBLIC
+        "${PROJECT_SOURCE_DIR}/GameObjects"
 )
 
-target_link_libraries(GameObjects PUBLIC Drawable)
+target_link_libraries(GameObjects 
+    PRIVATE 
+        Drawable
+)
 
-add_subdirectory(Tests)
+add_subdirectory(UT)
