--- a/Control/CMakeLists.txt
+++ b/Control/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(Control STATIC InputControl.cpp)
 
-target_include_directories(Control PUBLIC
-  "${PROJECT_SOURCE_DIR}/Control"
+target_include_directories(Control
+    PUBLIC
+      "${PROJECT_SOURCE_DIR}/Control"
 )
