--- a/.github/workflows/my_ci.yml
+++ b/.github/workflows/my_ci.yml
@@ -41,7 +41,7 @@ jobs:
       env:
         CC: ${{ steps.install_cc.outputs.cc }}
         CXX: ${{ steps.install_cc.outputs.cxx }}
-      run: cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -G Unix Makefiles -D "CMAKE_TOOLCHAIN_FILE=${{env.VCPKG_ROOT}}/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE:STRING=${{ matrix.configuration }} -DCMAKE_CXX_COMPILER=${{env.CXX}} -DCMAKE_C_COMPILER=${{env.CC}}
+      run: cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -G "Unix Makefiles" -D "CMAKE_TOOLCHAIN_FILE=${{env.VCPKG_ROOT}}/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE:STRING=${{ matrix.configuration }} -DCMAKE_CXX_COMPILER=${{env.CXX}} -DCMAKE_C_COMPILER=${{env.CC}}
     
     - name: CMake Build
       run: cmake --build ${{github.workspace}}/build
