--- a/.github/workflows/my_ci.yml
+++ b/.github/workflows/my_ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        configuration: [Debug, Release]
+        configuration: [Release]
         compiler: [clang]
 
     steps:
