--- a/.github/workflows/my_ci.yml
+++ b/.github/workflows/my_ci.yml
@@ -26,8 +26,8 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      # Unix Makefiles to use make
-      run: sudo apt-get update && sudo apt-get install -y build-essential libx11-dev libxrandr-dev libxi-dev libudev-dev libgl1-mesa-dev
+      # external libraries used by SFML Hack ?
+      run: sudo apt-get update && sudo apt-get install -y build-essential mesa-common-dev libx11-dev libxrandr-dev libgl1-mesa-dev libglu1-mesa-dev libfreetype6-dev libopenal-dev libsndfile1-dev
 
     - name: Setup Vcpkg
       uses: friendlyanon/setup-vcpkg@v1
