--- a/.github/workflows/my_ci.yml
+++ b/.github/workflows/my_ci.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - master__
+      - master
 
 jobs:
   build:
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install dependencies
       # external libraries used by SFML Hack ?
-      run: sudo apt-get update && sudo apt-get install -y build-essential mesa-common-dev libx11-dev libxrandr-dev libgl1-mesa-dev libglu1-mesa-dev libfreetype6-dev libopenal-dev libsndfile1-dev
+      run: sudo apt-get update && sudo apt-get install -y build-essential mesa-common-dev libx11-dev libxrandr-dev libgl1-mesa-dev libglu1-mesa-dev
 
     - name: Setup Vcpkg
       uses: friendlyanon/setup-vcpkg@v1
