--- a/.github/workflows/my_ci.yml
+++ b/.github/workflows/my_ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        configuration: [Release]
+        configuration: [Debug Release]
         compiler: [clang]
 
     steps:
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install dependencies
       # external libraries used by SFML Hack ?
-      run: sudo apt-get update && sudo apt-get install -y build-essential mesa-common-dev libx11-dev libxrandr-dev libgl1-mesa-dev libglu1-mesa-dev
+      run: sudo apt-get update && sudo apt-get install -y build-essential mesa-common-dev libx11-dev libxrandr-dev libgl1-mesa-dev libglu1-mesa-dev libxi-dev libudev-dev libgl1-mesa-dev
 
     - name: Setup Vcpkg
       uses: friendlyanon/setup-vcpkg@v1
